--- a/src/components/NavHeader/Sidebar.css
+++ b/src/components/NavHeader/Sidebar.css
@@ -19,7 +19,6 @@
 .Sidebar ul {
     margin-top: 100%;
     height: 100%;
-    overflow-y: scroll;
     scroll-behavior: smooth;
     padding-bottom: 150px;
 }
